--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -84,7 +84,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>docConverter</artifactId>
-            <version>2.0.4-SNAPSHOT</version>
+            <version>2.0.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -126,13 +126,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>location</artifactId>
-            <version>2.0.3-SNAPSHOT</version>
+            <version>2.0.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>news</artifactId>
-            <version>2.0.3-SNAPSHOT</version>
+            <version>2.0.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -261,7 +261,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>3.0.4-SNAPSHOT</version>
+            <version>3.0.4</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -275,7 +275,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap-acme-space-templates</artifactId>
-            <version>3.0.4-SNAPSHOT</version>
+            <version>3.0.4</version>
             <scope>runtime</scope>
         </dependency>
         
@@ -283,31 +283,31 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-management-api</artifactId>
-            <version>2.0.5-SNAPSHOT</version>
+            <version>2.0.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-viewer-service</artifactId>
-            <version>2.0.5-SNAPSHOT</version>
+            <version>2.0.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-viewer</artifactId>
-            <version>2.0.5-SNAPSHOT</version>
+            <version>2.0.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-thumbnails</artifactId>
-            <version>2.0.5-SNAPSHOT</version>
+            <version>2.0.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>video-thumbnails</artifactId>
-            <version>2.0.5-SNAPSHOT</version>
+            <version>2.0.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -330,7 +330,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>blog</artifactId>
-            <version>3.0.2-SNAPSHOT</version>
+            <version>3.0.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
