--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>7.1.4-SNAPSHOT</version>
+            <version>7.1.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -101,25 +101,25 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.0.5-SNAPSHOT</version>
+            <version>3.0.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.0.5-SNAPSHOT</version>
+            <version>3.0.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.0.4-SNAPSHOT</version>
+           <version>1.0.4</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.0.5-SNAPSHOT</version>
+            <version>3.0.5</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -174,7 +174,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.1.2-SNAPSHOT</version>
+            <version>7.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -210,13 +210,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>7.1.4-SNAPSHOT</version>
+            <version>7.1.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tasks</artifactId>
-            <version>7.1.2-SNAPSHOT</version>
+            <version>7.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -228,7 +228,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.0.3-SNAPSHOT</version>
+            <version>2.0.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -240,7 +240,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.4-SNAPSHOT</version>
+            <version>7.1.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
