--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,10 @@
     <description>Jahia CE Full Package</description>
 
     <scm>
-        <connection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/trunk/</connection>
-        <developerConnection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/trunk/</developerConnection>
-        <url>https://devtools.jahia.com/svn/jahia_pack/trunk</url>
+        <connection>scm:git:git@github.com:Jahia/dxm-pack.git</connection>
+        <developerConnection>scm:git:git@github.com:Jahia/dxm-pack.git</developerConnection>
+        <url>https://github.com/Jahia/dxm-pack</url>
+        <tag>HEAD</tag>
     </scm>
 
     <repositories>
