--- a/pom.xml
+++ b/pom.xml
@@ -62,9 +62,10 @@
     <description>Jahia CE Full Package</description>
 
     <scm>
-        <connection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-7-1-X-X-BRANCH</connection>
-        <developerConnection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-7-1-X-X-BRANCH</developerConnection>
-        <url>https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA-7-1-X-X-BRANCH</url>
+        <connection>scm:git:git@github.com:Jahia/dxm-pack.git</connection>
+        <developerConnection>scm:git:git@github.com:Jahia/dxm-pack.git</developerConnection>
+        <url>https://github.com/Jahia/dxm-pack</url>
+        <tag>JAHIA-7-1-X-X-BRANCH</tag>
     </scm>
 
     <repositories>
