--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
     
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-root</artifactId>
-  <version>7.2.0.0-BACKLOG5637-SNAPSHOT</version>
+  <version>7.2.0.0-SNAPSHOT</version>
     <name>Jahia Package Project Root</name>
     <groupId>org.jahia.server</groupId>
     <packaging>pom</packaging>
@@ -65,7 +65,7 @@
         <connection>scm:git:git@github.com:Jahia/dxm-pack-private.git</connection>
         <developerConnection>scm:git:git@github.com:Jahia/dxm-pack-private.git</developerConnection>
         <url>https://github.com/Jahia/dxm-pack-private</url>
-        <tag>BACKLOG-5637</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <repositories>
