--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -274,7 +274,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>3.0.4</version>
+            <version>3.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
