--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -334,7 +334,7 @@
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acmespaceelektra</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.6-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
         </dependency>
