--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -288,7 +288,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap-acme-space-templates</artifactId>
-            <version>4.0.0-SNAPSHOT</version>
+            <version>3.0.4</version>
             <scope>runtime</scope>
         </dependency>
 
