--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -180,7 +180,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>8.0.0-SNAPSHOT</version>
+            <version>7.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
