--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -275,7 +275,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap-acme-space-templates</artifactId>
-            <version>3.0.4</version>
+            <version>3.0.5-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         
