--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -91,6 +91,18 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>dx-base-demo-components</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>dx-base-demo-core</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>event</artifactId>
             <version>2.0.2</version>
             <scope>runtime</scope>
@@ -99,6 +111,12 @@
             <groupId>org.jahia.modules</groupId>
             <artifactId>faq</artifactId>
             <version>2.0.2</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>font-awesome</artifactId>
+            <version>4.6.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -292,6 +310,12 @@
             <version>3.0.5-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>dx-base-demo-templates</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
 
         <!-- Document management modules -->
         <dependency>
@@ -337,6 +361,13 @@
             <artifactId>acmespaceelektra</artifactId>
             <version>2.1.0-SNAPSHOT</version>
             <type>zip</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>digitall</artifactId>
+            <version>1.0.1-SNAPSHOT</version>
+            <type>jar</type>
             <scope>runtime</scope>
         </dependency>
 
