--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -216,13 +216,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>7.1.4-SNAPSHOT</version>
+            <version>7.1.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tasks</artifactId>
-            <version>7.1.2-SNAPSHOT</version>
+            <version>7.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
