--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -296,19 +296,19 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-management-api</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.6-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-viewer-service</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.6-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>document-viewer</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.6-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -320,7 +320,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>video-thumbnails</artifactId>
-            <version>2.0.5</version>
+            <version>2.0.6-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
