--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -198,7 +198,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.1.4-SNAPSHOT</version>
+            <version>7.1.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -246,7 +246,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.5-SNAPSHOT</version>
+            <version>7.1.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
