--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>7.1.5-SNAPSHOT</version>
+            <version>7.1.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -174,7 +174,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.1.3-SNAPSHOT</version>
+            <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -186,13 +186,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>7.1.4-SNAPSHOT</version>
+            <version>7.1.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.1.4-SNAPSHOT</version>
+            <version>7.1.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -228,7 +228,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.0.4-SNAPSHOT</version>
+            <version>2.0.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -240,7 +240,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.5-SNAPSHOT</version>
+            <version>7.1.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
