--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -65,7 +65,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>channels</artifactId>
-            <version>7.2.0-SNAPSHOT</version>
+            <version>7.2.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>7.2.0-SNAPSHOT</version>
+            <version>7.2.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -101,25 +101,25 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.1.0-SNAPSHOT</version>
+            <version>3.1.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.1.0-SNAPSHOT</version>
+            <version>3.1.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>1.1.0-SNAPSHOT</version>
+           <version>1.1.0</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.1.0-SNAPSHOT</version>
+            <version>3.1.0</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -162,7 +162,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -180,7 +180,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.2.0-SNAPSHOT</version>
+            <version>7.2.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -192,7 +192,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>serverSettings</artifactId>
-            <version>8.0.0-SNAPSHOT</version>
+            <version>8.0.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -228,13 +228,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-system</artifactId>
-            <version>8.0.0-SNAPSHOT</version>
+            <version>8.0.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.0-SNAPSHOT</version>
+            <version>2.1.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
