--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>calendar</artifactId>
-            <version>2.0.4-SNAPSHOT</version>
+            <version>2.0.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
