--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -280,7 +280,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>3.1.0</version>
+            <version>3.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 
