--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -234,7 +234,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.1.0</version>
+            <version>2.1.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
