--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -261,7 +261,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>3.0.6-SNAPSHOT</version>
+            <version>3.0.6</version>
             <scope>runtime</scope>
         </dependency>
 
