--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -101,13 +101,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.0.7-SNAPSHOT</version>
+            <version>3.0.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.0.7-SNAPSHOT</version>
+            <version>3.0.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -119,7 +119,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.0.7-SNAPSHOT</version>
+            <version>3.0.7</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -168,13 +168,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rolesmanager</artifactId>
-            <version>7.1.3-SNAPSHOT</version>
+            <version>7.1.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.1.4-SNAPSHOT</version>
+            <version>7.1.4</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -192,7 +192,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.1.7-SNAPSHOT</version>
+            <version>7.1.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -240,7 +240,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>userDashboard</artifactId>
-            <version>7.1.7-SNAPSHOT</version>
+            <version>7.1.7</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
