--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>calendar</artifactId>
-            <version>2.0.5-SNAPSHOT</version>
+            <version>2.0.5</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -198,7 +198,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-publication</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -293,7 +293,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>dx-base-demo-templates</artifactId>
-            <version>2.0.2-SNAPSHOT</version>
+            <version>2.0.2</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -360,7 +360,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>newsletter</artifactId>
-            <version>3.1.2-SNAPSHOT</version>
+            <version>3.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
