--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>assets</artifactId>
-            <version>7.2.1-SNAPSHOT</version>
+            <version>7.2.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ckeditor</artifactId>
-            <version>4.7.1-jahia1-SNAPSHOT</version>
+            <version>4.7.1-jahia1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -102,13 +102,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider</artifactId>
-            <version>3.1.2-SNAPSHOT</version>
+            <version>3.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-modules</artifactId>
-            <version>3.1.2-SNAPSHOT</version>
+            <version>3.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -120,7 +120,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>external-provider-vfs</artifactId>
-            <version>3.1.2-SNAPSHOT</version>
+            <version>3.1.2</version>
        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
@@ -163,7 +163,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>1.1.1-SNAPSHOT</version>
+            <version>1.1.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -181,7 +181,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>7.2.3-SNAPSHOT</version>
+            <version>7.2.3</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>7.2.2-SNAPSHOT</version>
+            <version>7.2.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
