--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -90,7 +90,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>7.2.2</version>
+            <version>7.2.3-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -217,7 +217,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tags</artifactId>
-            <version>7.1.4</version>
+            <version>7.1.5-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
